--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -5,11 +5,15 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>ID CARD</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+    <center><div>Id Card Mahasiswa</div></center>
+    <hr />
+    Nama Lengkap : <p th:text="${nma}"></p>
+    Tanggal Lahir : <p th:text="${ttl}"></p>
+    Foto : <img src="fto" alt="alt"/>
     </body>
 </html>
