--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -12,8 +12,40 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <body>
     <center><div>Id Card Mahasiswa</div></center>
     <hr />
-    Nama Lengkap : <p th:text="${nma}"></p>
+    <form method="POST" action="/getData" enctype="multipart/form-data">
+     <div class="wrapper">
+         
+<!--          <div class="content">
+                  <div class="head">
+                      <p th:text="${nma}">Your Name</p>
+                  </div>
+                  <div class="data">
+                      <p th:text="${ttl}">Following</p>
+                  </div>
+                </div>
+         
+         <div class="container">
+                <div class="img-container">
+                  <img th:src="${fto}" alt="">
+                </div>-->
+
+<!--            </div>
+        </div>-->
+
+<!--    Nama Lengkap : <p th:text="${nma}"></p>
     Tanggal Lahir : <p th:text="${ttl}"></p>
-    Foto : <img src="fto" alt="alt"/>
+    Foto : <img src="fto" alt="alt"/>-->
+
+<table border="1">
+            <th>Nama Lengkap</th>
+            <th>Tanggal Lahir</th>
+            <th>Foto</th>
+            
+            <tr>
+            <td th:text="${nma}"></td>
+            <td th:text="${ttl}"></td>
+            <td <img src="${fto}" alt="alt"></td>
+            </tr>
+        </table>
     </body>
 </html>
